entity_macros/tests/ui/derive/ent/unexpected-inner-attr-for-ent-edge.stderr
error: Unexpected edge attribute
  --> $DIR/unexpected-inner-attr-for-ent-edge.rs:17:34
   |
17 |     #[ent(edge(type = "TestEnt", something))]
   |                                  ^^^^^^^^^
